Tweaked margins on about page to prevent overlap with new social icons
Removed social icons from about page

--- a/assets/scss/components/_page.scss
+++ b/assets/scss/components/_page.scss
@@ -40,7 +40,7 @@
 
 .page-about {
     .material-cover {
-        margin-bottom: -40px;
+        margin-bottom: -30px;
     }
 
     #post-title {
